Background image, hover effects, and minor panels added

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -30,7 +30,7 @@ body{
 	padding-top: 5.5em;
 	min-height: 100%;
 	position: relative;
-	background-image: url("circuit.jpg") no-repeat center center fixed;
+	background: url("circuit2.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -82,3 +82,51 @@ html, body {
 	text-align: center;
 	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
+
+/* =================== PANELES ====================
+   ================================================ */
+
+.panel-producto{
+	height: 200px;
+	overflow: hidden;
+}
+
+.panel-personal {
+  border-style: none;
+  box-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+}
+
+.panel-personal > .panel-heading {
+  color: black;
+  background-color: #C7CACB;
+}
+
+.panel-personal > .panel-heading .badge {
+  color: #d9edf7;
+  background-color: #31708f;
+}
+
+.panel-personal ul > li blockquote{
+	font-size: 15px;
+	margin-bottom: 5px;
+}
+
+.panel-personal .list-special .list-group-item:first-child{
+	border-top-width: 0px;
+}
+
+.panel-personal .list-special .list-group-item{
+	border-top-width: 3px;
+}
+
+.panel-personal .table{
+	margin-bottom: 0px;
+}
+
+.panel-personal .table > tbody > tr:first-child > td,
+.panel-personal .table > tr:first-child > td{
+	border-top-width: 0px;
+}
+
+/* ================================================
+   ================== FIN PANELES ================= */
