--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,14 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="/">Ingeniería en Computación - UNLP</a>
+	      <a class="navbar-brand hvr-bounce-in" href="/">Ingeniería en Computación - UNLP</a>
 	    </div>
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
 	<!--    <li class="active"><a href="/subjects">Materias</a></li> -->
-			<li><a href="/subjects">Materias</a></li>
-	        <li><%= link_to 'Agregar Materia', new_subject_path %></li>
-	        <li><a href="/pages/info">Contacto</a></li>
+			<li><a href="/subjects" class="hvr-wobble-horizontal">Materias</a></li>
+	        <li><%= link_to 'Agregar Materia', new_subject_path , class:"hvr-wobble-horizontal" %></li>
+	        <li><a href="/pages/info"  class="hvr-wobble-horizontal">Contacto</a></li>
 	        <p class="navbar-text pull-right">
 	        <% if user_signed_in? %>
 	          Sesión iniciada bajo: <strong><%= current_user.email %></strong>.
