--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,39 +1,47 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
-<div class="row">
-  <div class="col-md-9">
-    <%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %>
-    <p><b>Nombre: </b><%= @subject.name %> <b>Código: </b><%= @subject.code %></p>
-    <p><b>Descripción: </b><%= @subject.description %></p>
-<!--    <p><b>Código: </b><%= @subject.code %></p>
-    <p><b>Año: </b><%= @subject.year %></p> -->
+<div class="container">
+  <div class="panel panel-personal">
+    <div class="row">
+      <div class="col-md-9">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= @subject.name %> | Código: <%= @subject.code %></h3>
+        </div>
+        <div class="panel-body">
+          <%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %>
+          <p><b>Descripción: </b><%= @subject.description %></p>
+      <!--    <p><b>Código: </b><%= @subject.code %></p>
+          <p><b>Año: </b><%= @subject.year %></p> -->
 
-<!-- 
+      <!-- 
 
-    COMMENTS SHOULD BELONG TO A USER, NOT A SUBJECT
+          COMMENTS SHOULD BELONG TO A USER, NOT A SUBJECT
 
--->
-    <p>
-      <%= link_to 'Editar', edit_subject_path(@subject) %> |
-      <%= link_to 'Destroy', @subject, data: { confirm: 'Are you sure?' }, method: :delete %> |
-      <%= link_to 'Back', subjects_path %>
-    </p>
+      -->
+          <p>
+            <%= link_to 'Editar', edit_subject_path(@subject) %> |
+            <%= link_to 'Destroy', @subject, data: { confirm: 'Are you sure?' }, method: :delete %> |
+            <%= link_to 'Back', subjects_path %>
+          </p>
 
 
-    <% if @comments.count > 0 %>
-      <h3>Comentarios</h3>
-      <% @comments.each do |comment| %>
-         <div>
-            <strong><%= comment.user_name %></strong>
-             <br /><p><%= comment.body %></p>
-             <p><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Estás segur@?' } %></p>
-          </div>
-      <% end %>
-    <% end %>
+          <% if @comments.count > 0 %>
+            <h3 class="panel-title">Comentarios</h3>
+            <% @comments.each do |comment| %>
+               <div>
+                  <strong><%= comment.user_name %></strong>
+                   <br /><p><%= comment.body %></p>
+                   <p><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Estás segur@?' } %></p>
+                </div>
+            <% end %>
+          <% end %>
 
-    <h3>Haz un comentario</h3>
-    <%= render 'comments/form' %>
-    </p>
-   
+          <h3>Haz un comentario</h3>
+          <%= render 'comments/form' %>
+          </p>
+       </div>
+
+     </div>
+    </div>
   </div>
 </div>
