--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,18 @@
-<div class="row">
-	<div class="col-md-6">
-		<h1>Noticias</h1>
-	</div>
-	<div class="col-md-6">
-		<a href="https://www.guarani-infoinge.unlp.edu.ar">SIU</a>
-	</div>
+<div class="container">
+    <div class="row">
+        <div class=></div>
+    	<div class="col-md-6">
+            <div class="well">
+    		  <h3>Noticias</h3>
+            </div>
+    	</div>
+    	<div class="col-md-6">
+            <div class="well">
+                <h3>Sitios de interés</h3>
+    		    <a href="https://www.guarani-infoinge.unlp.edu.ar">SIU Facultad de Informática-Ingeniería</a>
+            </div>
+    	</div>
+    </div>
 </div>
 
 <!--
