Changes in font color

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -21,6 +21,10 @@ header{
 	background-color: white;
 }
 
+.wfont{
+	color: white;
+}
+
 body{
 	height: 100%;
 	width: 100%;
@@ -76,6 +80,7 @@ html, body {
 }
 
 .subtitles{
+	color: white;
 	font-family: Verdana, sans-serif;
 	font-size: 2em;
 	padding-bottom: 1em;
