--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
     <% end %>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Contraseña" %> <i>(dejar en blanco si no la vas a cambiar)</i></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Contraseña" %> <i>(dejar en blanco si no la vas a cambiar)</i></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
@@ -25,7 +25,7 @@
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Confirmar contraseña" %></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Confirmar contraseña" %></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Contraseña actual" %> <i>(la necesitamos para poder verificar que seas vos quien hace los cambios)</i></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Contraseña actual" %> <i>(la necesitamos para poder verificar que seas vos quien hace los cambios)</i></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
