--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <%= devise_error_messages! %>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Nombre" %></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Nombre" %></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Apellido" %></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Apellido" %></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Email" %></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Email" %></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
       <% if @validatable %>
-        <div class="col-xs-6 col-md-6"><%= f.label "Contraseña" %><i>(<%= @minimum_password_length %> caracteres mínimo)</i></div>
+        <div class="col-xs-6 col-md-6 wfont"><%= f.label "Contraseña" %><i>(<%= @minimum_password_length %> caracteres mínimo)</i></div>
       <% end %>
     </div>
     <div class="row">
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Confirmación_de_contraseña" %></div>
+      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Confirmación_de_contraseña" %></div>
     </div>
     <div class="row">
       <div class="col-xs-3 col-md-3"></div>
