--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,12 +4,19 @@
     	<div class="col-md-6">
             <div class="well">
     		  <h3>Noticias</h3>
+              
             </div>
     	</div>
     	<div class="col-md-6">
             <div class="well">
                 <h3>Sitios de interés</h3>
-    		    <a href="https://www.guarani-infoinge.unlp.edu.ar">SIU Facultad de Informática-Ingeniería</a>
+                <ul style="list-style-type:none">
+    		      <li><a href="https://www.guarani-infoinge.unlp.edu.ar" target="_blank">SIU Facultad de Informática-Ingeniería</a></li>
+                  <li><a href="http://163.10.22.53/ingenieria/sitio/planEstudio_2011.html" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
+                  <li><a href="http://www.ing.unlp.edu.ar" target="_blank">Facultad de Ingeniería</a></li>
+                  <li><a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática</a></li>
+                  <li><a href="https://webunlp.ead.unlp.edu.ar/index.php" target="_blank">WebUnlp</a></li>
+                </ul>
             </div>
     	</div>
     </div>
