--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -51,6 +51,14 @@
 		</div>
 		<div class="row">
 		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6 wfont"><%= f.label "Carpeta de DRIVE" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :notes, autocomplete: "off", class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
 		  <div class="col-xs-6 col-md-6 wfont"><%= f.label "Imagen representativa" %></div>
 		</div>
 		<div class="row">
