--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -16,6 +16,9 @@
             <% unless @subject.website.blank?%>
               <p><b><%= link_to 'Sitio web de la cátedra', @subject.website, target:"_blank" %></b></p>
             <% end %>
+            <% unless @subject.notes.blank?%>
+              <p><b><%= link_to 'Apuntes, examenes y resumenes', @subject.notes, target:"_blank" %></b></p>
+            <% end %>
         <!--    <p><b>Código: </b><%= @subject.code %></p>
             <p><b>Año: </b><%= @subject.year %></p> -->
 
