--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,62 @@
-<h2 class="subtitles">Editar Usuario</h2>
-<div class="container-fluid">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
-<!--
+<div class="container">
     <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.label "Email" %></div>
+        <div class=></div>
+      <div class="col-md-1 col-xs-1">
+      </div>
+      <div class="col-md-8 col-xs-8">
+            <div class="well">
+              <div class="container-fluid">
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+                  <%= devise_error_messages! %>
+              <!--
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.label "Email" %></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.email_field :email, autocomplete: true , class:"form-control" %></div>
+                  </div> 
+              -->
+                  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                  <% end %>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.label "Contraseña" %> <i>(dejar en blanco si no la vas a cambiar)</i></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :password, autocomplete: "off", class:"form-control" %></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.label "Confirmar contraseña" %></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.label "Contraseña actual" %> <i>(la necesitamos para poder verificar que seas vos quien hace los cambios)</i></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8"><%= f.password_field :current_password, autocomplete: "off", class:"form-control" %></div></div>
+                  </div>
+                  <div class="row" style="padding-top:1em">
+                    <div class="col-xs-1 col-md-1"></div>
+                    <div class="col-xs-8 col-md-8 form-group"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
+                  </div>
+                <% end %>
+              <!--
+                <h3>Cancel my account</h3>
+                <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+                <%= link_to "Back", :back %>
+              -->
+              </div>
+            </div>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.email_field :email, autocomplete: true , class:"form-control" %></div>
-    </div> 
--->
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Contraseña" %> <i>(dejar en blanco si no la vas a cambiar)</i></div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.password_field :password, autocomplete: "off", class:"form-control" %></div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Confirmar contraseña" %></div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %></div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6 wfont"><%= f.label "Contraseña actual" %> <i>(la necesitamos para poder verificar que seas vos quien hace los cambios)</i></div>
-    </div>
-    <div class="row">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6"><%= f.password_field :current_password, autocomplete: "off", class:"form-control" %></div></div>
-    </div>
-    <div class="row" style="padding-top:1em">
-      <div class="col-xs-3 col-md-3"></div>
-      <div class="col-xs-6 col-md-6 form-group"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
-    </div>
-  <% end %>
-<!--
-  <h3>Cancel my account</h3>
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-  <%= link_to "Back", :back %>
--->
 </div>
