--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -49,7 +49,7 @@ body > footer{
 	padding-top: 0.8em;
 	padding-bottom: 0.8em;
 	margin-bottom: 0.5em;
-	position: absolute;
+	position: relative;
 	right: 0;
   	bottom: 0;
   	left: 0;
